2011-06-01  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        Reviewed by Andreas Kling.

        [Qt][WK2] Add QGLWidget viewport support to MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61802

        Add command line parameter and menu item to MiniBrowser application 
        enabling use of QGLWidget for browser viewport.

        * MiniBrowser/qt/BrowserWindow.cpp:
        (BrowserWindow::BrowserWindow):
        (BrowserWindow::toggleGLViewport):
        * MiniBrowser/qt/BrowserWindow.h:
        * MiniBrowser/qt/MiniBrowserApplication.cpp:
        (MiniBrowserApplication::handleUserOptions):
        * MiniBrowser/qt/MiniBrowserApplication.h:
        (WindowOptions::WindowOptions):

2011-06-01  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        Print out autogen arguments when they differ from the last set, to help
        with debugging build issues.

        * Scripts/webkitdirs.pm: Print out previous and current build arguments
        when they differ.

2011-06-01  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] run-launcher should run MiniBrowser in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=61858

        * Scripts/run-launcher: Check whether -2 command line option has
        been passed and run MiniBrowser instead of GtkLauncher.

2011-05-31  Hao Zheng  <zhenghao@chromium.org>

        Reviewed by Dirk Pranke.

        Fix exception in verbose printing mode.
        https://bugs.webkit.org/show_bug.cgi?id=61723

        * Scripts/webkitpy/layout_tests/layout_package/printing.py:

2011-05-31  Yong Li  <yoli@rim.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=54807
        We have been assuming plain bitfields (like "int a : 31") are always signed integers.
        However some compilers can treat them as unsigned. For example, RVCT 4.0 states plain